--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -119,10 +119,10 @@
                 </div>
                 
                 <div class="hero-cta">
-                    <a href="#templates-library" class="primary-button">
-                        <i class="fa-solid fa-download"></i>
-                        Browse Templates
-                    </a>
+                     <a href="../professional-services/#contact-form" class="primary-button">
+                            <i class="fa-solid fa-envelope"></i>
+                            Request Assistance
+                        </a>
                     <a href="../../docs/index.html#templates" class="secondary-outline-button">
                         <i class="fa-solid fa-book"></i>
                         Detailed Guide
