--- a/product/templates/index.html
+++ b/product/templates/index.html
@@ -33,20 +33,53 @@
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
-        "@type": "ItemList",
+        "@type": "CollectionPage",
         "name": "Selenix Automation Templates",
         "description": "Collection of ready-made browser automation templates for various use cases including web scraping, data extraction, form filling, and workflow automation.",
         "url": "https://selenix.io/product/templates/",
         "mainEntity": {
-            "@type": "SoftwareApplication",
-            "name": "Selenix Templates",
-            "applicationCategory": "Productivity",
-            "operatingSystem": "Windows",
-            "offers": {
-                "@type": "Offer",
-                "price": "0",
-                "priceCurrency": "USD"
-            }
+            "@type": "ItemList",
+            "name": "Automation Templates Collection",
+            "description": "Pre-built automation workflows for Selenix users",
+            "numberOfItems": "50+",
+            "itemListElement": [
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "Web Scraping Templates",
+                    "description": "Templates for extracting data from websites",
+                    "applicationCategory": "Productivity",
+                    "operatingSystem": "Windows",
+                    "offers": {
+                        "@type": "Offer",
+                        "price": "0",
+                        "priceCurrency": "USD"
+                    }
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "Form Automation Templates",
+                    "description": "Templates for automated form filling and submission",
+                    "applicationCategory": "Productivity",
+                    "operatingSystem": "Windows",
+                    "offers": {
+                        "@type": "Offer",
+                        "price": "0",
+                        "priceCurrency": "USD"
+                    }
+                },
+                {
+                    "@type": "SoftwareApplication",
+                    "name": "E-commerce Automation Templates",
+                    "description": "Templates for e-commerce tasks and monitoring",
+                    "applicationCategory": "Productivity",
+                    "operatingSystem": "Windows",
+                    "offers": {
+                        "@type": "Offer",
+                        "price": "0",
+                        "priceCurrency": "USD"
+                    }
+                }
+            ]
         },
         "publisher": {
             "@type": "Organization",
@@ -55,6 +88,11 @@
                 "@type": "ImageObject",
                 "url": "https://selenix.io/selenixlogo.png"
             }
+        },
+        "isPartOf": {
+            "@type": "SoftwareApplication",
+            "name": "Selenix",
+            "url": "https://selenix.io"
         }
     }
     </script>
